tests/errors/e_redeclmeth.pyx
class C:
	def f(self):
		pass
	def f(self):
		pass
_ERRORS = u"""
/Local/Projects/D/Pyrex/Source/Tests/Errors1/e_redeclmeth.pyx:4:1: 'f' already declared
"""
